fixed the book's title alignment with the rating

--- a/src/index.css
+++ b/src/index.css
@@ -84,12 +84,14 @@ body, .app {
   height: 330px;
   border-radius: 15px;
   display: block;
+  margin-bottom: 20px;
 }
 
 .book-header {
   display: flex;
   margin: 0px;
   font-weight: bold;
+  justify-content: space-between;
 }
 
 .book-title, .book-rating {
@@ -97,10 +99,6 @@ body, .app {
   padding: 0px;
   font-size: 16px;
   align-self: center;
-}
-
-.book-title {
-  padding: 20px 20px 5px 0px;
 }
 
 .book-author {
